# QtDock

./: .gitignore  .kateproject  CMakeLists.txt  README.md  plasma_applet_dockbartest.desktop  qtdock.pro
src/: MainApplet.cpp  MainApplet.hpp  TaskBar.cpp  TaskBar.hpp  TaskGroup.cpp  TaskGroup.hpp  TaskManager.cpp  TaskManager.hpp  TrayWidget.cpp  TrayWidget.hpp  WindowList.cpp  WindowList.hpp  Xcb.hpp  extraWidgets.cpp  extraWidgets.hpp  main.cpp
